--- a/victor-mao-angular/src/app/navbar/navbar.component.html
+++ b/victor-mao-angular/src/app/navbar/navbar.component.html
@@ -1,6 +1,10 @@
-<mat-tab-group mat-align-tabs="center" animationDuration="1000ms">
-  <mat-tab label="Home">Content 1</mat-tab>
-  <mat-tab label="Work">Content 2</mat-tab>
-  <mat-tab label="Hobbies">Content 3</mat-tab>
-  <mat-tab label="Contact Me">Content 4</mat-tab>
-</mat-tab-group>
+<nav mat-tab-nav-bar mat-align-tabs="center">
+  <a mat-tab-link *ngFor="let tab of tabs"
+    [routerLink]="tab.route"
+    routerLinkActive #rla="routerLinkActive"
+    [active]="rla.isActive">
+    {{tab.label}}
+  </a>
+</nav>
+
+<router-outlet></router-outlet>
