Add home component
Add profile pic and home component information

--- a/victor-mao-angular/src/app/home/home.component.html
+++ b/victor-mao-angular/src/app/home/home.component.html
@@ -1,1 +1,15 @@
-<p>home works!</p>
+<div class='some-page-wrapper'>
+    <div class='row'>
+      <div class='column'>
+          <div class="col-left">
+            <img src="../../assets/profile-pic-cropped.jpg" alt="A headshot profile picture of me.">
+          </div>
+      </div>
+      <div class='column'>
+          <div class="col-right">
+            <h1 class="md-display-4"><mat-icon>person</mat-icon>Victor Mao</h1>
+            <h1><mat-icon>place</mat-icon>Dallas, TX</h1>
+          </div>
+      </div>
+    </div>
+  </div>
