Add tab nav bar and components to WorkComponent
Add tab nav bar and components to WorkComponent

--- a/victor-mao-angular/src/app/navbar/navbar.component.html
+++ b/victor-mao-angular/src/app/navbar/navbar.component.html
@@ -1,4 +1,6 @@
-<nav mat-tab-nav-bar mat-align-tabs="center">
+<router-outlet></router-outlet>
+
+<nav mat-tab-nav-bar mat-align-tabs="center" mat-header-position="above">
   <a mat-tab-link *ngFor="let tab of tabs"
     [routerLink]="tab.route"
     routerLinkActive #rla="routerLinkActive"
@@ -7,4 +9,3 @@
   </a>
 </nav>
 
-<router-outlet></router-outlet>
