--- a/victor-mao-angular/src/app/work/work.component.html
+++ b/victor-mao-angular/src/app/work/work.component.html
@@ -1,1 +1,11 @@
-<p>work works!</p>
+<mat-tab-group mat-align-tabs="center" color="accent" animationDuration="1000ms" selectedIndex="1">
+  <mat-tab label="Education">
+    <app-education></app-education>
+  </mat-tab>
+  <mat-tab label="Experience">
+    <app-experience></app-experience>
+  </mat-tab>
+  <mat-tab label="Projects">
+    <app-projects></app-projects>
+  </mat-tab>
+</mat-tab-group>
