Update experience component
Update experience component

--- a/victor-mao-angular/src/app/work/experience/experience.component.html
+++ b/victor-mao-angular/src/app/work/experience/experience.component.html
@@ -1,1 +1,46 @@
-<p>experience works!</p>
+<div class="wrapper">
+  <div class="row">
+    <h1>Experience</h1>
+  </div>
+
+  <div class="row">
+    <mat-card>
+      <mat-card-header>
+        <img mat-card-avatar src="https://stockplanservices.schwab.com/spm/images/CS-logo-DIGITAL.jpg" alt="Charles Schwab Logo" />
+        <mat-card-title>Software Developer I (N.E.R.D. Program)</mat-card-title>
+        <mat-card-subtitle>
+          <span class="mr-16"><i class="fas fa-calendar"></i>June 2020 - Present</span>
+          <span class="mr-16"><i class="fas fa-map-marker-alt"></i>Westlake, TX</span>
+        </mat-card-subtitle>
+      </mat-card-header>
+    </mat-card>
+  </div>
+
+  <div class="row">
+    <mat-card>
+      <mat-card-header>
+        <img mat-card-avatar src="https://stockplanservices.schwab.com/spm/images/CS-logo-DIGITAL.jpg" alt="Charles Schwab Logo" />
+        <mat-card-title>Software Engineer Intern</mat-card-title>
+        <mat-card-subtitle>
+          <span class="mr-16"><i class="fas fa-calendar"></i>Summer 2019</span>
+          <span class="mr-16"><i class="fas fa-map-marker-alt"></i>Westlake, TX</span>
+        </mat-card-subtitle>
+      </mat-card-header>
+    </mat-card>
+  </div>
+  
+  <div class="row">
+    <mat-card>
+      <mat-card-header>
+        <img mat-card-avatar src="https://www.automated-health.com/wp-content/uploads/2018/06/logo.png" style="width: 128px !important;" alt="Charles Schwab Logo" />
+        <mat-card-title>IT Intern</mat-card-title>
+        <mat-card-subtitle>
+          <span class="mr-16"><i class="fas fa-calendar"></i>Summer 2018</span>
+          <span class="mr-16"><i class="fas fa-map-marker-alt"></i>Pittsburgh, PA</span>
+        </mat-card-subtitle>
+      </mat-card-header>
+    </mat-card>
+  </div>
+  
+</div>
+
