--- a/victor-mao-angular/src/app/work/education/education.component.html
+++ b/victor-mao-angular/src/app/work/education/education.component.html
@@ -1,12 +1,9 @@
 <div class="wrapper">
-    <div class="row">
-      <h1>Education</h1>
-    </div>
-  
+ 
     <div class="row">
       <mat-card>
         <mat-card-header>
-          <img mat-card-avatar src="https://www.utdallas.edu/brand/files/ut-dallas-border-5.png" style="width: 128px !important;" alt="Charles Schwab Logo" />
+          <img mat-card-avatar src="https://www.utdallas.edu/brand/files/ut-dallas-border-5.png" style="width: 128px !important;" alt="UT-Dallas Logo" />
           <mat-card-title>M.S. Information Technology and Management</mat-card-title>
           <mat-card-subtitle>
             <span class="mr-16"><i class="fas fa-calendar"></i>Jan 2029 - May 2020</span>
@@ -19,7 +16,7 @@
     <div class="row">
       <mat-card>
         <mat-card-header>
-          <img mat-card-avatar src="https://www.utdallas.edu/brand/files/ut-dallas-border-5.png" style="width: 128px !important;" alt="Charles Schwab Logo" />
+          <img mat-card-avatar src="https://www.utdallas.edu/brand/files/ut-dallas-border-5.png" style="width: 128px !important;" alt="UT-Dallas Logo" />
           <mat-card-title>B.S. Computer Science</mat-card-title>
           <mat-card-subtitle>
             <span class="mr-16"><i class="fas fa-calendar"></i>Aug 2016 - May 2019</span>
@@ -32,8 +29,8 @@
     <div class="row">
       <mat-card>
         <mat-card-header>
-          <img mat-card-avatar src="https://blogsmedia.lse.ac.uk/blogs.dir/76/files/2019/10/cropped-LSE-Logo_Master-File_RGB_Txt_Blk_e0112b.png" style="width: 128px !important;" alt="Charles Schwab Logo" />
-          <mat-card-title>Study Abroad</mat-card-title>
+          <img mat-card-avatar src="https://blogsmedia.lse.ac.uk/blogs.dir/76/files/2019/10/cropped-LSE-Logo_Master-File_RGB_Txt_Blk_e0112b.png" style="width: 128px !important;" alt="LSE Logo" />
+          <mat-card-title>Study Abroad - Introduction to Data Science</mat-card-title>
           <mat-card-subtitle>
             <span class="mr-16"><i class="fas fa-calendar"></i>Aug 2018</span>
             <span class="mr-16"><i class="fas fa-map-marker-alt"></i>London School of Economics | London, UK</span>
@@ -45,7 +42,7 @@
     <div class="row">
         <mat-card>
           <mat-card-header>
-            <img mat-card-avatar src="https://pgss-applications.pa-gov-schools.org/assets/logo-6b5a1ac09c4c86c95839abd5029c1b1e29345cd2a23adcb6c4dbc28410b0f806.png" alt="Charles Schwab Logo" />
+            <img mat-card-avatar src="https://pgss-applications.pa-gov-schools.org/assets/logo-6b5a1ac09c4c86c95839abd5029c1b1e29345cd2a23adcb6c4dbc28410b0f806.png" alt="PGSS Logo" />
             <mat-card-title>Pennsylvania Governor's School for the Sciences</mat-card-title>
             <mat-card-subtitle>
               <span class="mr-16"><i class="fas fa-calendar"></i>Jul 2015</span>
