--- a/victor-mao-angular/src/app/work/experience/experience.component.html
+++ b/victor-mao-angular/src/app/work/experience/experience.component.html
@@ -1,16 +1,12 @@
 <div class="wrapper">
   <div class="row">
-    <h1>Experience</h1>
-  </div>
-
-  <div class="row">
     <mat-card>
       <mat-card-header>
         <img mat-card-avatar src="https://stockplanservices.schwab.com/spm/images/CS-logo-DIGITAL.jpg" alt="Charles Schwab Logo" />
-        <mat-card-title>Software Developer I (N.E.R.D. Program)</mat-card-title>
+        <mat-card-title>Software Engineer I - N.E.R.D. Program</mat-card-title>
         <mat-card-subtitle>
-          <span class="mr-16"><i class="fas fa-calendar"></i>June 2020 - Present</span>
-          <span class="mr-16"><i class="fas fa-map-marker-alt"></i>Westlake, TX</span>
+          <span class="mr-16"><i class="fas fa-calendar"></i>Jun 2020 - Present</span>
+          <span class="mr-16"><i class="fas fa-map-marker-alt"></i>Charles Schwab | Westlake, TX</span>
         </mat-card-subtitle>
       </mat-card-header>
     </mat-card>
@@ -20,10 +16,10 @@
     <mat-card>
       <mat-card-header>
         <img mat-card-avatar src="https://stockplanservices.schwab.com/spm/images/CS-logo-DIGITAL.jpg" alt="Charles Schwab Logo" />
-        <mat-card-title>Software Engineer Intern</mat-card-title>
+        <mat-card-title>Software Developer Intern</mat-card-title>
         <mat-card-subtitle>
-          <span class="mr-16"><i class="fas fa-calendar"></i>Summer 2019</span>
-          <span class="mr-16"><i class="fas fa-map-marker-alt"></i>Westlake, TX</span>
+          <span class="mr-16"><i class="fas fa-calendar"></i>Jun 2019 - Jul 2019</span>
+          <span class="mr-16"><i class="fas fa-map-marker-alt"></i>Charles Schwab | Westlake, TX</span>
         </mat-card-subtitle>
       </mat-card-header>
     </mat-card>
@@ -32,11 +28,11 @@
   <div class="row">
     <mat-card>
       <mat-card-header>
-        <img mat-card-avatar src="https://www.automated-health.com/wp-content/uploads/2018/06/logo.png" style="width: 128px !important;" alt="Charles Schwab Logo" />
+        <img mat-card-avatar src="https://www.automated-health.com/wp-content/uploads/2018/06/logo.png" style="width: 128px !important;" alt="AHS Schwab Logo" />
         <mat-card-title>IT Intern</mat-card-title>
         <mat-card-subtitle>
-          <span class="mr-16"><i class="fas fa-calendar"></i>Summer 2018</span>
-          <span class="mr-16"><i class="fas fa-map-marker-alt"></i>Pittsburgh, PA</span>
+          <span class="mr-16"><i class="fas fa-calendar"></i>May 2018 - Aug 2018</span>
+          <span class="mr-16"><i class="fas fa-map-marker-alt"></i>Automated-Health Systems | Pittsburgh, PA</span>
         </mat-card-subtitle>
       </mat-card-header>
     </mat-card>
