--- a/victor-mao-angular/src/app/home/home.component.css
+++ b/victor-mao-angular/src/app/home/home.component.css
@@ -17,8 +17,8 @@ a:hover {
 
 i {
     margin-right: 5px;
-    width: 24px;
-    height: 24px;
+    width: 30px;
+    text-align: center;
 }
 
 .social-media i {
