--- a/victor-mao-angular/src/app/work/work.component.html
+++ b/victor-mao-angular/src/app/work/work.component.html
@@ -1,32 +1,3 @@
-<div class="row">
-    <div class="column">
-        <mat-accordion>
-            <mat-expansion-panel [expanded]="true">
-              <mat-expansion-panel-header>
-                <mat-panel-title>
-                  Experience
-                </mat-panel-title>
-              </mat-expansion-panel-header>
-              <app-experience></app-experience>
-            </mat-expansion-panel>
-            <mat-expansion-panel>
-              <mat-expansion-panel-header>
-                <mat-panel-title>
-                  Education
-                </mat-panel-title>
-              </mat-expansion-panel-header>
-              <app-education></app-education>
-            </mat-expansion-panel>
-            <mat-expansion-panel>
-              <mat-expansion-panel-header>
-                <mat-panel-title>
-                  Projects
-                </mat-panel-title>
-              </mat-expansion-panel-header>
-              <app-projects></app-projects>
-            </mat-expansion-panel>
-          </mat-accordion>
-    </div>
+<div class="wrapper">
+  <app-resume></app-resume>
 </div>
-
-
