Add basic MatGridList for ProjectsComponent
Add basic MatGridList for ProjectsComponent

--- a/victor-mao-angular/src/app/work/projects/projects.component.html
+++ b/victor-mao-angular/src/app/work/projects/projects.component.html
@@ -1,1 +1,14 @@
-<p>projects works!</p>
+<div class="wrapper">
+  <div class="row">
+    <h1>Projects</h1>
+  </div>
+  <mat-grid-list cols="3" rowHeight="2:1">
+    <mat-grid-tile>1</mat-grid-tile>
+    <mat-grid-tile>2</mat-grid-tile>
+    <mat-grid-tile>3</mat-grid-tile>
+    <mat-grid-tile>4</mat-grid-tile>
+    <mat-grid-tile>5</mat-grid-tile>
+    <mat-grid-tile>6</mat-grid-tile>
+  </mat-grid-list>
+</div>
+
