--- a/victor-mao-angular/src/app/work/projects/projects.component.html
+++ b/victor-mao-angular/src/app/work/projects/projects.component.html
@@ -3,12 +3,14 @@
     <h1>Projects</h1>
   </div>
   <mat-grid-list cols="3" rowHeight="2:1">
-    <mat-grid-tile>1</mat-grid-tile>
-    <mat-grid-tile>2</mat-grid-tile>
-    <mat-grid-tile>3</mat-grid-tile>
-    <mat-grid-tile>4</mat-grid-tile>
-    <mat-grid-tile>5</mat-grid-tile>
-    <mat-grid-tile>6</mat-grid-tile>
+    <mat-grid-tile *ngFor="let project of projects">
+      <mat-grid-tile-header>{{ project.title }}</mat-grid-tile-header>
+      <mat-grid-tile-footer>
+        <mat-chip-list [selectable]="false">
+          <mat-chip *ngFor="let chip of project.tech">{{ chip }}</mat-chip>
+        </mat-chip-list>
+      </mat-grid-tile-footer>
+    </mat-grid-tile>
   </mat-grid-list>
 </div>
 
