--- a/victor-mao-angular/src/app/play/frisbee/frisbee.component.html
+++ b/victor-mao-angular/src/app/play/frisbee/frisbee.component.html
@@ -4,7 +4,12 @@
   </div>
 <div class="row">
   <div class="column">
-    
+    <div class="mat-elevation-z8" *ngIf="apiLoaded | async">
+      <google-map
+        height="400px"
+        width="750px"
+        [options]="options"></google-map>
+    </div>
   </div>
   <div class="column">
     <mat-form-field>
