--- a/victor-mao-angular/src/app/components/interests/interests.component.html
+++ b/victor-mao-angular/src/app/components/interests/interests.component.html
@@ -3,14 +3,14 @@
     <h1>Interests</h1>
   </div>
   <mat-grid-list cols="3" rowHeight="2:1">
-    <mat-grid-tile *ngFor="let project of projects">
+    <!-- <mat-grid-tile *ngFor="let project of projects">
       <mat-grid-tile-header>{{ project.title }}</mat-grid-tile-header>
       <mat-grid-tile-footer>
         <mat-chip-list [selectable]="false">
           <mat-chip *ngFor="let chip of project.tech">{{ chip }}</mat-chip>
         </mat-chip-list>
       </mat-grid-tile-footer>
-    </mat-grid-tile>
+    </mat-grid-tile> -->
   </mat-grid-list>
 </div>
 
