--- a/victor-mao-angular/src/app/components/projects/projects.component.html
+++ b/victor-mao-angular/src/app/components/projects/projects.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<div>
   <div class="row">
     <h1>Projects</h1>
   </div>
@@ -8,7 +8,7 @@
         <mat-card class="mat-elevation-z4" >
           <mat-card-header>
             <mat-card-title>{{ project.title }}</mat-card-title>
-            <mat-card-subtitle>{{ project.date }}</mat-card-subtitle>
+            <mat-card-subtitle>{{ project.subtitle }}</mat-card-subtitle>
           </mat-card-header>
           <img mat-card-image src="../../../assets/project-images/profile-pic-cropped.jpg">
           <mat-card-content>
