--- a/victor-mao-angular/src/app/components/projects/projects.component.html
+++ b/victor-mao-angular/src/app/components/projects/projects.component.html
@@ -16,7 +16,7 @@
               <mat-chip *ngFor="let chip of project.tech">{{ chip }}</mat-chip>
             </mat-chip-list>
           </mat-card-content>
-          <mat-card-actions>
+          <mat-card-actions align="end">
             <button mat-button (click)="openDialog(project)">LEARN MORE</button>
           </mat-card-actions>
         </mat-card>
