--- a/victor-mao-angular/src/app/components/interests/interests.component.html
+++ b/victor-mao-angular/src/app/components/interests/interests.component.html
@@ -1,16 +1,23 @@
-<div class="wrapper">
+<div>
   <div class="row">
     <h1>Interests</h1>
   </div>
-  <mat-grid-list cols="3" rowHeight="2:1">
-    <!-- <mat-grid-tile *ngFor="let project of projects">
-      <mat-grid-tile-header>{{ project.title }}</mat-grid-tile-header>
-      <mat-grid-tile-footer>
-        <mat-chip-list [selectable]="false">
-          <mat-chip *ngFor="let chip of project.tech">{{ chip }}</mat-chip>
-        </mat-chip-list>
-      </mat-grid-tile-footer>
-    </mat-grid-tile> -->
-  </mat-grid-list>
+  <div class="content">
+    <div fxLayout="row wrap" fxLayoutGap="16px grid">
+      <div fxFlex="33%" fxFlex.xs="100%" fxFlex.sm="50%" *ngFor="let interest of interests">
+        <mat-card class="mat-elevation-z4" >
+          <mat-card-header>
+            <mat-card-title>{{ interest.title }}</mat-card-title>
+            <mat-card-subtitle>{{ interest.subtitle }}</mat-card-subtitle>
+          </mat-card-header>
+          <img mat-card-image src="{{ interest.image }}">
+          <mat-card-content>
+          </mat-card-content>
+          <mat-card-actions align="end">
+            <button mat-button (click)="openDialog(interest)">LEARN MORE</button>
+          </mat-card-actions>
+        </mat-card>
+      </div>
+    </div>
+  </div>
 </div>
-
