--- a/victor-mao-angular/src/app/components/home/home.component.html
+++ b/victor-mao-angular/src/app/components/home/home.component.html
@@ -2,7 +2,7 @@
     <div class='row'>
       <div class='column'>
           <div class="col-left" @fade>
-            <img src="../../assets/profile-pic-cropped.jpg" alt="A headshot profile picture of me.">
+            <img src="../../assets/profile-pic-cropped.jpg" alt="Professional headshot profile picture of Victor Mao.">
           </div>
       </div>
       <div class='column'>
