Add project descriptions + Interest dialog

--- a/victor-mao-angular/src/app/components/interests/interest-dialog/interest-dialog.component.html
+++ b/victor-mao-angular/src/app/components/interests/interest-dialog/interest-dialog.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title>{{ data.project.title }} | {{ data.project.subtitle }}</h1>
+<h1 mat-dialog-title>{{ data.interest.title }} | {{ data.interest.subtitle }}</h1>
 <mat-dialog-content>
   <div [innerHTML]="description | marked"></div>
 </mat-dialog-content>
